# CURLWrapper

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: CurlWrapper.h
samples/: CMakeLists.txt
samples/sendGet-example/: CMakeLists.txt  main.cpp
samples/sendPost-example/: CMakeLists.txt  main.cpp
src/: CurlWrapper.cpp
tests/: CMakeLists.txt  CurlWrapperTest.cpp  FakeCurlWrapper.cpp  FakeCurlWrapper.h
