CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (curlcpp)

OPTION (BUILD_SHARED_LIBS "Build shared libraries" OFF)
OPTION (BUILD_TESTING "Build tests" OFF)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET (SOURCES
        ${SRC_DIR}/CurlWrapper.cpp
    )

SET (HEADERS
        ${INCLUDE_DIR}/CurlWrapper.h
    )

INCLUDE (CTest)
IF (BUILD_TESTING)
    ADD_SUBDIRECTORY (tests)
ENDIF (BUILD_TESTING)

ADD_SUBDIRECTORY (third_party)

IF (BUILD_SHARED_LIBS)
    ADD_LIBRARY (curlcpp SHARED ${SOURCES} ${HEADERS})
ELSE ()
    ADD_LIBRARY (curlcpp STATIC ${SOURCES} ${HEADERS})
ENDIF (BUILD_SHARED_LIBS)
TARGET_INCLUDE_DIRECTORIES (curlcpp PUBLIC ${INCLUDE_DIR})
TARGET_LINK_LIBRARIES (curlcpp libcurl)
